# GitOwl

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GEMINI.md  LICENSE  PROJECT_BRAIN.md  README.md  ai-test.js  pyproject.toml  react bit. txt  requirements-dev.txt  requirements.txt  session-history-2026-07-03.md  test.diff  uichanges.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  devguard-review.yml  gitowl-review.yml
api/: review.py
dashboard/: README.md  dev.db  package-lock.json  package.json
dashboard/prisma/: schema.prisma
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: HomeClient.tsx  PolicyClient.tsx  SyncButton.tsx
dashboard/src/lib/: ai.ts  auth.ts  (+1 more)
demo/: insecure.py  insecure_example.py  test66
devguard/: __init__.py  __main__.py  cli.py  comment.py  config.py  describe.py  diff_utils.py  github_client.py  logging_config.py  models.py  policy.py  pricing.py  reviewer.py  risk.py  semgrep_runner.py  suggest.py
devguard/ai_client/: README.md  __init__.py  base.py  ollama.py  openai_compatible.py  prompt.py  registry.py
devguard/eval/: __init__.py  __main__.py  mock_provider.py  scoring.py
examples/: gitowl-review.yml
gitowl/: __init__.py  __main__.py  cli.py  comment.py  config.py  dashboard.py  describe.py  diff_utils.py  github_client.py  logging_config.py  models.py  policy.py  pricing.py  reviewer.py  risk.py  semgrep_runner.py  suggest.py
gitowl/ai_client/: README.md  __init__.py  base.py  ollama.py  openai_compatible.py  prompt.py  registry.py
gitowl/eval/: __init__.py  __main__.py  mock_provider.py  scoring.py
playground/: .env.example  README.md  vercel.json
playground/api/: requirements.txt  review.py
playground/web/: index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_cli.py  test_comment.py  test_config.py  test_describe.py  test_diff_utils.py  test_eval.py  test_github_client.py  test_policy.py  test_pricing.py  test_prompt_parsing.py  test_providers.py  test_reviewer.py  test_risk.py  test_semgrep_runner.py  test_suggest.py
tests/fixtures/: sample.diff
(+70 files in other folders)
