[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devguard"
version = "0.1.0"
description = "AI-assisted code review tool for GitHub pull requests."
readme = "PROJECT_BRAIN.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DevGuard maintainers" }]

[tool.setuptools.packages.find]
include = ["devguard*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["devguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that run DevGuard against sample data",
]

[tool.coverage.run]
source = ["devguard"]
omit = ["devguard/__main__.py"]
